--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.0.5",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.15.5",
