--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,21 @@
 version: '3'
 services:
   frontend:
-    build:
-      context: ./frontend
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    container_name: frontend
     ports:
-      - "3000:80"
-
-  backend:
-    build:
-      context: ./backend
-    ports:
-      - "3001:3000"
+      - "3000:80" # Проброс порта фронтенда
 
   nginx:
-    image: nginx:alpine
-    volumes:
-      - /etc/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+    image: nginx:latest
+    container_name: nginx
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro # монтируем ваш nginx.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro # монтируем letsencrypt
     depends_on:
       - frontend
-      - backend
