--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,34 @@
-server {
-    listen 80;
-    server_name azi-online.com www.azi-online.com;
-    return 301 https://$host$request_uri;
+events {
+    worker_connections 1024; # По умолчанию значение для worker_connections
 }
 
-server {
-    listen 443 ssl;
-    server_name azi-online.com www.azi-online.com;
+http {
 
-    ssl_certificate /etc/letsencrypt/live/your_domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your_domain.com/privkey.pem;
+    server {
+        server_name azi-online.com www.azi-online.com;
 
-    location / {
-        root /app;
-        try_files $uri $uri/ /index.html;
+        listen 443 ssl; # managed by Certbot
+        ssl_certificate /etc/letsencrypt/live/azi-online.com/fullchain.pem; # managed by Certbot
+        ssl_certificate_key /etc/letsencrypt/live/azi-online.com/privkey.pem; # managed by Certbot
+        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+        location / {
+            proxy_pass http://frontend:80; # Поменяйте на актуальное имя вашего фронтенд контейнера
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    server {
+        if ($host = azi-online.com) {
+            return 301 https://$host$request_uri;
+        } # managed by Certbot
+
+        listen 80;
+        server_name azi-online.com www.azi-online.com;
+        return 404; # managed by Certbot
     }
 }
