--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
         location / {
-            proxy_pass http://frontend:80; # Поменяйте на актуальное имя вашего фронтенд контейнера
+            proxy_pass http://azi-online.com:80; # Поменяйте на актуальное имя вашего фронтенд контейнера
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
