--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
-version: '3'
-services:
-  frontend:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    container_name: frontend
-    ports:
-      - "3000:80" # Проброс порта фронтенда
+version: '3.8'
 
+services:
   nginx:
     image: nginx:latest
-    container_name: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt/live/azi-online.com/fullchain.pem:/etc/letsencrypt/live/azi-online.com/fullchain.pem
+      - /etc/letsencrypt/live/azi-online.com/privkey.pem:/etc/letsencrypt/live/azi-online.com/privkey.pem
     ports:
       - "80:80"
       - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro # монтируем ваш nginx.conf
-      - /etc/letsencrypt:/etc/letsencrypt:ro # монтируем letsencrypt
     depends_on:
       - frontend
+
+  frontend:
+    image: your-frontend-image
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
