--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,15 @@
-events {
-    worker_connections 1024; # По умолчанию значение для worker_connections
-}
+events {}
 
 http {
-
     server {
+        listen 443 ssl;
         server_name azi-online.com www.azi-online.com;
 
-        listen 443 ssl; # managed by Certbot
-        ssl_certificate /etc/letsencrypt/live/azi-online.com/fullchain.pem; # managed by Certbot
-        ssl_certificate_key /etc/letsencrypt/live/azi-online.com/privkey.pem; # managed by Certbot
-        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+        ssl_certificate /etc/letsencrypt/live/azi-online.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/azi-online.com/privkey.pem;
 
         location / {
-            proxy_pass http://azi-online.com:80; # Поменяйте на актуальное имя вашего фронтенд контейнера
+            proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -23,12 +18,11 @@ http {
     }
 
     server {
-        if ($host = azi-online.com) {
-            return 301 https://$host$request_uri;
-        } # managed by Certbot
-
         listen 80;
         server_name azi-online.com www.azi-online.com;
-        return 404; # managed by Certbot
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
     }
 }
